# College-Project

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  README.md  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
apps/backend/: drizzle.config.ts  package.json  tsconfig.json
apps/backend/src/: index.ts  routes.ts
apps/backend/src/db/: index.ts  reset.ts  seed.ts
apps/backend/src/db/migrations/: 0000_fantastic_puppet_master.sql  0001_common_marten_broadcloak.sql  0002_eager_krista_starr.sql  0003_common_mephistopheles.sql  0004_petite_vertigo.sql
apps/backend/src/db/schema/: audit.ts  auth.ts  index.ts
apps/backend/src/lib/: audit-log.ts  auth.ts  constants.ts  env.ts  logger.ts  redis.ts  table-scan.ts  utils.ts
apps/backend/src/middlewares/: auth.ts
apps/backend/src/routes/: access.ts  index.ts  logs.ts  table.ts
apps/backend/src/types/: index.ts  table.ts
apps/fast-api/: package.json  pyproject.toml  run.py
apps/fast-api/src/: main.py
apps/website/: components.json  index.html  package.json  vite.config.ts
apps/website/public/: manifest.webmanifest
apps/website/src/: index.css  main.tsx  routeTree.gen.ts
apps/website/src/components/: mode-toggle.tsx  theme-provider.tsx
apps/website/src/components/ui/: button.tsx  card.tsx  checkbox.tsx  field.tsx  select.tsx  sonner.tsx  table.tsx
apps/website/src/lib/: auth.ts  constants.ts  env.ts  utils.ts
apps/website/src/routes/: __root.tsx  _authenticated.tsx  index.tsx  login.tsx
apps/website/src/routes/_authenticated/: create.tsx  (+2 more)
(+11 files in other folders)
